# Hackathon-Outpeer

./: .env  README.md
VisualSolutionLibrary-2/: .replit  README.md  Test.py  app.py  authentication.py  components.py  data_manager.py  package-lock.json  package.json  pyproject.toml  utils.py
VisualSolutionLibrary-2/data/: comments.json  ratings.json  solutions.json  users.json
VisualSolutionLibrary-2/data/uploads/: 320ac22b-d915-4fdf-8597-af396c63fb74.py  a4cdb193-75a3-440c-b123-548088d71717.py  sample_solution1.py  sample_solution2.py  sample_solution3.py
ai_assitant/backend/: db.sqlite3  manage.py  requirements.txt
ai_assitant/backend/api/: views.py
ai_assitant/backend/api/migrations/: 0001_initial.py
ai_assitant/backend/task_library/: asgi.py  settings.py  urls.py
ai_assitant/frontend/: .token  app.py  utils.py
ai_assitant/frontend/frontend-venv/Scripts/: activate
backend/: .env  db.sqlite3
backend/api/: models.py  views.py
backend/task_library/: ai_service.py  settings.py  wsgi.py
frontend/: app.py  utils.py
frontend/frontend-venv/: pyvenv.cfg
frontend/frontend-venv/Scripts/: activate.bat
